# data-engineering

./: README.md  pyproject.toml
.hatch/: .gitignore
src/data_engineering/lecture2/: create_csv.ipynb  data2.csv  generate_temperature_humidity.ipynb
src/data_engineering/lecture2/csv/: data.csv  temperature_humidity.csv  test_csv.csv
src/data_engineering/lecture3/: create_json.ipynb  data.json  data3.json
src/data_engineering/lecture4/: create_xml.ipynb  generate_air_quality_readings.ipynb  sensor_to_xml.ipynb
src/data_engineering/lecture4/data/: data.xml  data3.xml  test.xml
src/data_engineering/lecture4/sensor_data/: airquality.xml
src/data_engineering/lecture4/sensor_data/xml/: air_quality_readings.xml
src/data_engineering/lecture5/: air_quality_reading.csv  generate_air_quality_readings.ipynb  generate_air_quality_readings_moodle.ipynb  generate_motion_detection.ipynb  generate_temperature_humidity.ipynb
src/data_engineering/lecture5/sensor_data/: air_quality_reading.csv  motion_detection.csv  temperature_humidity.csv
src/data_engineering/lecture5/sensor_data/csv/: temperature_humidity.csv  temperature_humidity_errors.csv  temperature_humidity_regression.csv
src/data_engineering/lecture5/sensor_data/json/: motion_detection.json  motion_detection_errors.json
src/data_engineering/lecture5/sensor_data/xml/: air_quality_readings.xml  air_quality_readings_errors.xml
src/data_engineering/lecture6/: PredictiveModeling.ipynb
src/data_engineering/lecture7/: database_insert.ipynb
