[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-engineering"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Paul Bichl", email = "paul.bichl@edu.fh-joanneum.at" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ipykernel",
  "numpy",
  "pandas",
]

[project.urls]
Documentation = "https://github.com/Paul Bichl/data-engineering#readme"
Issues = "https://github.com/Paul Bichl/data-engineering/issues"
Source = "https://github.com/Paul Bichl/data-engineering"

[tool.hatch.version]
path = "src/data_engineering/__about__.py"

[tool.hatch.envs.default]
type = "virtual"